# hermesforge-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml
hermesforge_mcp/: server.py
